# data-recipe

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE-V2.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  claude_desktop_config.json  pyproject.toml
.claude/commands/: analyze-dataset.md  datarecipe.md  deploy-project.md  profile-annotators.md
.github/workflows/: ci.yml  release.yml
docs/: landing-en.md  landing-zh.md
examples/cl-bench-reproduction/: PRODUCTION_GUIDE.md  README.md  methodology.md
examples/cl-bench-reproduction/reproduction_kit/: context_patterns.json  judge_prompts.json  judge_prompts.md  reproduction_checklist.md  sample_Domain_Knowledge_Reasoning.json  sample_Empirical_Discovery_and_Simulation.json  sample_Procedural_Task_Execution.json  sample_Rule_System_Application.json  subcategory_analysis.json  system_prompt_templates.json
examples/cl-bench-reproduction/scripts/: analyze_rubrics.py  batch_production_demo.py  generate_rubrics.py
recipes/: allenai-sera-4.6-lite-t2.yaml  anthropic-hh-rlhf.yaml  arc-agi-2.yaml  tau2-bench.yaml
src/datarecipe/: __init__.py  __main__.py  analyzer.py  batch_analyzer.py  cli.py  comparator.py  constants.py  cost_calculator.py  deep_analyzer.py  deployer.py  ira_analyzer.py  llm_analyzer.py  mcp_server.py  pii_detector.py  pipeline.py  profiler.py  quality_metrics.py  schema.py  task_profiles.py  workflow.py
src/datarecipe/analyzers/: __init__.py  context_strategy.py  llm_dataset_analyzer.py  llm_url_analyzer.py  spec_analyzer.py  url_analyzer.py
src/datarecipe/cache/: __init__.py  analysis_cache.py
src/datarecipe/cli/: __init__.py  _helpers.py  analyze.py  batch.py  deep.py  infra.py  spec.py  tools.py
src/datarecipe/core/: __init__.py  deep_analyzer.py  project_layout.py
src/datarecipe/cost/: __init__.py  calibrator.py  complexity_analyzer.py  phased_model.py  token_analyzer.py
src/datarecipe/extractors/: __init__.py  prompt_extractor.py  rubrics_analyzer.py
src/datarecipe/generators/: __init__.py  annotation_spec.py  enhanced_guide.py  executive_summary.py  human_machine_split.py  industry_benchmark.py  llm_enhancer.py  milestone_plan.py  pattern_generator.py  spec_output.py
src/datarecipe/integrations/: __init__.py  radar.py
src/datarecipe/knowledge/: __init__.py  dataset_catalog.py  knowledge_base.py
src/datarecipe/parsers/: __init__.py  document_parser.py
src/datarecipe/providers/: __init__.py  local.py
src/datarecipe/reports/: __init__.py  integrated_report.py
src/datarecipe/sources/: __init__.py  github.py  huggingface.py  local.py  web.py
src/datarecipe/triggers/: __init__.py  watcher.py
tests/: test_analysis_cache.py  test_annotation_spec.py  test_cli.py  test_cli_commands.py  test_cli_extended.py  test_comparator.py  test_context_strategy.py  test_core_modules.py  test_cost_calculator.py  test_cost_modules.py  test_deep_analyzer_core.py  test_deployer.py  test_document_parser.py  test_enhanced_guide.py  test_executive_summary.py  test_field_definition.py  test_generators.py  test_human_machine_split.py  test_industry_benchmark.py  test_integrated_report.py  test_ira_analyzer.py  test_knowledge_base.py  test_llm_enhancer.py  test_local_source.py  test_pattern_generator.py  test_pii_detector.py  test_pipeline.py  test_pipeline_phases.py  test_profiler.py  test_prompt_extractor.py  test_providers.py  test_quality_gates.py  test_quality_metrics_ext.py  test_radar_integration.py  test_regressions.py  test_rubrics_analyzer.py  test_schema_ext.py  test_source_github.py  test_source_huggingface.py  test_source_web.py  (+4 more)
