[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datarecipe"
version = "0.1.0"
description = "An AI dataset 'ingredients label' analyzer - reverse-engineer how datasets are built"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DataRecipe Contributors"}
]
keywords = [
    "ai",
    "dataset",
    "machine-learning",
    "data-analysis",
    "huggingface",
    "synthetic-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.20.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
datarecipe = "datarecipe.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/data-recipe"
Documentation = "https://github.com/yourusername/data-recipe#readme"
Repository = "https://github.com/yourusername/data-recipe"
Issues = "https://github.com/yourusername/data-recipe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
