[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datarecipe"
version = "0.2.0"
description = "AI dataset 'ingredients label' analyzer - reverse-engineer datasets, estimate costs, analyze quality, and generate production workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Liu Kai", email = "mrliukai@gmail.com"}
]
keywords = [
    "ai",
    "dataset",
    "machine-learning",
    "data-analysis",
    "huggingface",
    "synthetic-data",
    "cost-estimation",
    "quality-metrics",
    "data-provenance",
    "llm-distillation",
    "workflow-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.20.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]
pdf = [
    "pymupdf>=1.23.0",
]
quality = [
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "datasketch>=1.6.0",
]
workflow = [
    "jinja2>=3.1.0",
]
all = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "datasketch>=1.6.0",
    "jinja2>=3.1.0",
]
full = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "datasketch>=1.6.0",
    "jinja2>=3.1.0",
    "tenacity>=8.0.0",
    "label-studio>=1.10.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
datarecipe = "datarecipe.cli:main"

[project.entry-points."datarecipe.providers"]
local = "datarecipe.providers.local:LocalFilesProvider"

[project.urls]
Homepage = "https://github.com/liuxiaotong/data-recipe"
Documentation = "https://github.com/liuxiaotong/data-recipe#readme"
Repository = "https://github.com/liuxiaotong/data-recipe"
Issues = "https://github.com/liuxiaotong/data-recipe/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
